Implement `HpoAssociationLoader` to load `HpoAssociationData`. Deprecate `HpoDiseaseAnnotationParser` in favor of `HpoDiseaseAnnotationLoader`. Simplify the I/O (loader) API.